--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,23 +28,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audio_plus: ^0.0.4
+  cupertino_icons: ^1.0.6
+  esc_pos_utils_plus: ^2.0.3
   flutter:
     sdk: flutter
-  sqflite: ^2.3.3+1  
-  print_bluetooth_thermal: ^1.1.0
-  permission_handler: ^11.3.1
-  esc_pos_utils_plus: ^2.0.3
+  image: ^4.2.0
   intl: ^0.19.0
-  audio_plus: ^0.0.4
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  permission_handler: ^11.3.1
+  print_bluetooth_thermal: ^1.1.0
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -52,10 +47,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -67,14 +63,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/audio/
+    - assets/logo/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
